Ajustando algunos detalles en html quitando líneas extras y ordenar css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,57 +6,59 @@ body {
 /* 1. navbar - propiedades */
 
 /* se setean propiedades generales de la navbar */
-.navbar{
+.navbar {
   font-size: 1em;
   font-weight: 300;
-  color:#FFFFFf;
+  color: #FFFFFf;
 }
+
 /* se dan propiedades a los estados de los links */
-.navbar a{
-  color:#FFFFFF;
+.navbar a {
+  color: #FFFFFF;
   border-radius: 2px;
 }
-.navbar a:hover{
-font-weight: 600;
+
+.navbar a:hover {
+  font-weight: 600;
   border-radius: 2px;
   color: #0088c7;
 }
+
 /* Se alinea imágen al margen izquierdo */
-.navbar-brand img{
+.navbar-brand img {
   margin-left: 20px;
 }
 
-
 /* Hero Section */
-
 #Hero-Section {
   background-image: url("../img/bg-hero.jpg");
   background-repeat: no-repeat;
-  background-size:auto;
+  background-size: auto;
 }
 
-#Hero-Section h1,p{
-  color:#FFFFFF;
+#Hero-Section h1,
+p {
+  color: #FFFFFF;
 }
 
-#misCaracteristicas{
+#misCaracteristicas {
   background-color: #0088c7;
 }
 
-.textoEmpresa{
+.textoEmpresa {
   color: #1f2029;
   font-weight: 500;
-  
 }
 
-.textoFecha{
+.textoFecha {
   color: #565a5c;
   font-weight: 300;
   margin-top: 2px;
   margin-bottom: 3px;
-  
+
 }
-.textoDescrip{
+
+.textoDescrip {
   color: #565a5c;
   font-weight: 200;
   font-size: 1em;
@@ -66,116 +68,78 @@ font-weight: 600;
 
 /* Mis trabajos */
 
-.card-text{
-  color:#1f2029;
+.card-text {
+  color: #1f2029;
 }
 
-#Mis-trabajos{
+#Mis-trabajos {
   background-color: #0088c7;
 }
 
 
-Propiedades grilla
-
-
-.card{
-	margin: auto;
-    height: auto;
+Propiedades grilla .card {
+  margin: auto;
+  height: auto;
 }
 
-.card .textProyecto{
-  color:#1f2029;
-  margin:5px 0 5px 0;
+.card .textProyecto {
+  color: #1f2029;
+  margin: 5px 0 5px 0;
 }
 
 
-.backgroundColor{
-    background-color:#0088c7;
+.backgroundColor {
+  background-color: #0088c7;
 }
 
-.text-company{
-    font-size: 1rem;
-    color: #1f2029;
-    margin: 0;
-    font-weight: 300;
-}
-.text-address{
-    font-size: 0.813rem;
-    color:#707070;
-    font-weight: 300;
-    margin: 0;
+.text-company {
+  font-size: 1rem;
+  color: #1f2029;
+  margin: 0;
+  font-weight: 300;
 }
 
-.botonPrev{
-    font-size: 0.7em;
-    color:#565a5c;
-    font-weight: 600;
-    text-decoration: none;
+.text-address {
+  font-size: 0.813rem;
+  color: #707070;
+  font-weight: 300;
+  margin: 0;
 }
 
-.botonPrev:hover{
-    font-size: 0.7em;
-    color:#FFFFFF;
-    font-weight: 600;
-    text-decoration: none;
-}
-.botonPrev:visited{
+.botonPrev {
   font-size: 0.7em;
-  color:#565a5c;
+  color: #565a5c;
   font-weight: 600;
   text-decoration: none;
 }
 
-.botonRepo a{
+.botonPrev:hover {
   font-size: 0.7em;
-  color:#0088c7;
+  color: #FFFFFF;
   font-weight: 600;
   text-decoration: none;
 }
 
-.botonRepo:hover a{
+.botonPrev:visited {
   font-size: 0.7em;
-  color:#FFFFFF;
+  color: #565a5c;
   font-weight: 600;
   text-decoration: none;
 }
 
-
-
-.botonPrev:focus{
-  color:red;
+.botonRepo a {
+  font-size: 0.7em;
+  color: #0088c7;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-
-.price-now{
-    font-size: 1.25rem;
-    color:#28A745;
-    font-weight: 500;
-    text-decoration: none;
+.botonRepo:hover a {
+  font-size: 0.7em;
+  color: #FFFFFF;
+  font-weight: 600;
+  text-decoration: none;
 }
-.price-now:hover{
-    font-size: 1.25rem;
-    color:#28A745;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Contacto */
 
@@ -185,13 +149,13 @@ Propiedades grilla
 }
 
 /* @media (max-width: 768px) {} */
-  #Contacto form label {
-    font-weight: 400;
-  }
+#Contacto form label {
+  font-weight: 400;
+}
 
-.RRSS{
-    font-size:15px;
-    margin-top:20px;
-    margin-bottom:10px;
-    font-weight:600;
+.RRSS {
+  font-size: 15px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 600;
 }
